Fix alignment for sp dashboard

--- a/myclean/static/css/style.css
+++ b/myclean/static/css/style.css
@@ -358,7 +358,7 @@ footer {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    align-items: center;
+    align-content: center;
     margin-top: 10vh;
 }
 
